Fixed margin on mobile fullscreen menu

--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -19,13 +19,13 @@
       }
     }
     .nav-links {
-      position: fixed;
-      top: 0;
-      right: 0;
-      left: 0;
-      // position: absolute;
+      // position: fixed;
       // top: 0;
+      // right: 0;
       // left: 0;
+      position: absolute;
+      top: 0;
+      left: 0;
       opacity: 0;
       flex-direction: column;
       justify-content: space-evenly; // vertical axis
