--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -135,12 +135,12 @@ h3 {
 }
 
 
-ul {
-  list-style: none;
-	margin: 1rem;
-  text-align: left;
-  color: $text-color;
-}
+// ul {
+//   list-style: none;
+// 	margin: 1rem;
+//   text-align: left;
+//   color: $text-color;
+// }
 
 .post a:link {
   color: $text-color-sec;
